@@ -7,7 +7,7 @@ copyright_holder = Florian Ragwitz
 
 [@Author::ETHER]
 :version = 0.086
-installer = none    ; we supply our own, below
+installer = MakeMaker
 surgical_podweaver = 1
 -remove = AutoPrereqs       ; avoid detecting conditional prereqs
 -remove = PodCoverageTests  ; TODO
@@ -16,13 +16,6 @@ Git::Tag.tag_format = %v
 RewriteVersion::Transitional.version_regexp = ^(.+)$
 Test::Version.has_version = 0   ; for internal modules (FIXME: new option forthcoming)
 Test::MinimumVersion.max_target_perl = 5.008001
--remove = Git::GatherDir
-
-[Git::GatherDir / we want Makefile.PL]
-exclude_filename = README.md
-exclude_filename = README.pod
-exclude_filename = CONTRIBUTING
-exclude_filename = LICENSE
 
 [Prereqs]
 Module::Runtime = 0.012
@@ -54,9 +47,25 @@ ExtUtils::CBuilder = 0.26
 [Prereqs / DevelopRequires]
 Devel::Hide = 0.0007            ; releasers *must* test both the XS and PP paths
 
-[Meta::Dynamic::Config]
-
-; see Makefile.PL for lots of magic
-[MakeMaker::Custom]
+[DynamicPrereqs]
+:version = 0.007
+-delimiter = |
+-raw = |require 'inc/MakeMakerSubs.pm';
+-raw = |if (can_xs()) {
+-raw = |  # when changing, also update in dist.ini, B::Hooks::EndOfScope::XS
+-raw = |  $WriteMakefileArgs{PREREQ_PM}{'Variable::Magic'} = $FallbackPrereqs{'Variable::Magic'} = '0.48';
+-raw = |
+-raw = |  # make sure we smoke the pure-perl version fallback
+-raw = |  $WriteMakefileArgs{PREREQ_PM}{'Devel::Hide'} = $FallbackPrereqs{'Devel::Hide'} = '0.0007'
+-raw = |    if is_smoker();
+-raw = |}
+-raw = |else {
+-raw = |  $WriteMakefileArgs{PREREQ_PM}{'Hash::Util::FieldHash'} = $FallbackPrereqs{'Hash::Util::FieldHash'} = 0;
+-raw = |  $WriteMakefileArgs{PREREQ_PM}{'Scalar::Util'} = $FallbackPrereqs{'Scalar::Util'} = 0;
+-raw = |  $WriteMakefileArgs{PREREQ_PM}{'Tie::Hash'} = $FallbackPrereqs{'Tie::Hash'} = 0;
+-raw = |  $WriteMakefileArgs{PREREQ_PM}{'Tie::StdHash'} = $FallbackPrereqs{'Tie::StdHash'} = 0;
+-raw = |  $WriteMakefileArgs{PREREQ_PM}{'base'} = $FallbackPrereqs{'base'} = 0;
+-raw = |  $WriteMakefileArgs{PREREQ_PM}{'constant'} = $FallbackPrereqs{'constant'} = 0;
+-raw = |}
 
 ; authordep Pod::Weaver::Section::Contributors
